build/eks-test-ns/core-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: core-api-service
  namespace: eks-test-ns
spec:
  selector:
    app: core-api
  type: ClusterIP 
  ports:
  - name: node
    port: 80
    targetPort: 8080
